De authentication aanpak zit me nog niet helemaal lekker...